# honobono

./: .gitignore  failure_modes_with_qwen3-4b.txt  main.py  overall_failure_modes.txt  pipeline_design.txt  pyproject.toml  try_01b.py
tools/: common.py  core.py  fetch_episodes.py  fetch_model.py  pipeline.py  prompts.py
